Fixed form icons alignment.

--- a/scss/landio.scss
+++ b/scss/landio.scss
@@ -2,8 +2,8 @@
 
     Theme Name: Landio HTML
     Theme URI:  https://github.com/tatygrassini/landio-html
-    Version: 1.0
-    Author: Taty Grassini @tatygrassini
+    Version:    1.0
+    Author:     Taty Grassini @tatygrassini
     Author URI: http://tatygrassini.github.io/
 
 -----------------------------------------------------------------------------------*/
@@ -26,37 +26,37 @@
 @import "bootstrap/reboot";
 @import "bootstrap/type";
 @import "bootstrap/images";
-@import "bootstrap/code";
+// @import "bootstrap/code";
 @import "bootstrap/grid";
-@import "bootstrap/tables";
+// @import "bootstrap/tables";
 @import "bootstrap/forms";
 @import "bootstrap/buttons";
 
 // Components
 @import "bootstrap/animation";
 @import "bootstrap/dropdown";
-@import "bootstrap/button-group";
-@import "bootstrap/input-group";
+// @import "bootstrap/button-group";
+// @import "bootstrap/input-group";
 @import "bootstrap/custom-forms";
 @import "bootstrap/nav";
 @import "bootstrap/navbar";
 @import "bootstrap/card";
-@import "bootstrap/breadcrumb";
-@import "bootstrap/pagination";
-@import "bootstrap/pager";
+// @import "bootstrap/breadcrumb";
+// @import "bootstrap/pagination";
+// @import "bootstrap/pager";
 @import "bootstrap/labels";
 @import "bootstrap/jumbotron";
-@import "bootstrap/alert";
-@import "bootstrap/progress";
+// @import "bootstrap/alert";
+// @import "bootstrap/progress";
 @import "bootstrap/media";
 @import "bootstrap/list-group";
 @import "bootstrap/responsive-embed";
-@import "bootstrap/close";
+// @import "bootstrap/close";
 
 // Components w/ JavaScript
 @import "bootstrap/modal";
-@import "bootstrap/tooltip";
-@import "bootstrap/popover";
+// @import "bootstrap/tooltip";
+// @import "bootstrap/popover";
 @import "bootstrap/carousel";
 
 // Utility classes
@@ -995,11 +995,6 @@ input.has-icon-left:-webkit-autofill {
     z-index: 9999;
   }
   .form-control { padding-left: 60px; }
-
-  // @include media-breakpoint-up(md) {
-  //   &:before { left: 60px; }
-  //   &:after  { left: 28px; }
-  // }
 }
 
 .form-control-name:after {
